tests/js/success/cfg_double1.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ***************************************************************************** */
var x;
var y;
x = 12.34;
y = 0.123235323;
